user now cannot drop idealist element onto pan zoom frame behind the console, resolves #102

--- a/client/hcomp/subroute.css
+++ b/client/hcomp/subroute.css
@@ -13,6 +13,10 @@ Console elements
  /* min-height: 8000px;*/
 }
 
+.console-highlight {
+  border: 3px solid black;
+}
+
 #mock{
   z-index: 999;
   border-bottom: 2px solid #000000;
@@ -84,6 +88,8 @@ Zoom control elements
 
 #zBar{
    display: inline-block;
+   width: 128px;
+   height: 15px;
 }
 #zIn {
    display: inline-block;
@@ -136,7 +142,7 @@ Cluster control elements
     width: 200px;
     max-width: 237px;
     height: 40px;
-    font-size: 20px;
+    font-size: 18px;
     border-radius: 8px;
     padding: 10px;
 }
@@ -201,6 +207,13 @@ Zoomspace elements
     left: -1780px;
     min-height: 5000px;
     min-width: 5000px;
+}
+
+.zoom-hover {
+  background-color: #0080FF;
+  -moz-box-shadow:     0 0 150px #0CFFFF;
+  -webkit-box-shadow:  0 0 150px #96E7F6;
+  box-shadow:         0 0 150px #66D7FF;
 }
 
 .zoomSpaceElement {
